--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
     "@octokit/core": "^3.5.1",
     "@remix-run/react": "^1.2.3",
     "@remix-run/vercel": "^1.2.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "@uploadcare/react-widget": "^1.3.9",
     "@uploadcare/upload-client": "^2.2.0",
     "axios": "^0.25.0",
@@ -43,9 +41,12 @@
     "monaco-themes": "^0.4.0",
     "node-fetch": "^3.2.0",
     "prettier": "^2.5.1",
-    "remix": "^1.2.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "remix-utils": "^2.4.0"
+    "remix": "^1.2.3",
+    "remix-utils": "^2.4.0",
+    "xdm": "^3.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
