--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@monaco-editor/loader": "^1.2.0",
     "@monaco-editor/react": "^4.3.1",
     "@octokit/core": "^3.5.1",
+    "@octokit/rest": "^18.12.0",
     "@remix-run/react": "^1.2.3",
     "@remix-run/vercel": "^1.2.3",
     "@uploadcare/react-widget": "^1.3.9",
@@ -23,6 +24,7 @@
     "axios": "^0.25.0",
     "base-64": "^1.0.0",
     "busboy": "^1.4.0",
+    "crypto-js": "^4.1.1",
     "dotenv": "^14.3.2",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.4.0",
@@ -55,6 +57,7 @@
     "@remix-run/dev": "^1.2.3",
     "@remix-run/eslint-config": "^1.2.3",
     "@remix-run/serve": "^1.2.3",
+    "@types/crypto-js": "^4.1.1",
     "@types/jest": "^27.4.0",
     "@types/markdown-it": "^12.2.3",
     "@types/react": "^17.0.24",
