--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@monaco-editor/react": "^4.3.1",
     "@octokit/core": "^3.5.1",
     "@octokit/rest": "^18.12.0",
+    "@prisma/client": "^3.10.0",
     "@remix-run/react": "^1.2.3",
     "@remix-run/vercel": "^1.2.3",
+    "@supabase/supabase-js": "^1.31.0",
     "@uploadcare/react-widget": "^1.3.9",
     "@uploadcare/upload-client": "^2.2.0",
     "axios": "^0.25.0",
     "base-64": "^1.0.0",
     "busboy": "^1.4.0",
     "crypto-js": "^4.1.1",
+    "date-fns": "^2.28.0",
     "dotenv": "^14.3.2",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.4.0",
@@ -68,6 +71,7 @@
     "eslint": "^8.9.0",
     "jest": "^27.4.7",
     "monaco-editor": "^0.31.1",
+    "prisma": "^3.10.0",
     "typescript": "^4.5.5"
   },
   "engines": {
